since we install in the dockerfile, i guess all we need to do is run it

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -25,8 +25,7 @@ phases:
   # - command
   build:
     commands:
-     - cd resume
-     - cargo run
+     - resume
     # - command
     #post_build:
     #commands:
