--- a/resume/Cargo.toml
+++ b/resume/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 flap = "0.0.11"
-lambda_runtime = "0.2.1"
-rusoto_s3 = "0.40.0"
-chrono = "0.4.9"
-json = "0.12.0"
+#lambda_runtime = "0.2.1"
+#rusoto_s3 = "0.40.0"
+#chrono = "0.4.9"
+#json = "0.12.0"
