--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -28,9 +28,11 @@ phases:
 #     - echo "COMPILING BLAH BLAH BLAH ---------------------------------"
      - cargo build --release
     # - command
-#  post_build:
-#    commands:
-#     - docker ps
+  post_build:
+    commands:
+     - ls
+     - ls resume
+     - ls target
     # - command
 
 
