buildspec: artifact file

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -41,9 +41,9 @@ phases:
 #    methinks it must be
 artifacts:
   files:
-   - '*/resume'
+   - "$(pwd)"
 #   - location
-#  name:
+#  name: $(date +%Y-%m-%d)
 #  discard-paths: yes
 #  base-directory: location
 #cache:
