--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -45,7 +45,7 @@ artifacts:
 #   - location
 #  name: $(date +%Y-%m-%d)
 #  discard-paths: yes
-  base-directory: .
+  base-directory: "$(pwd)"
 #cache:
 #  paths:
 #   - paths
