--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -45,6 +45,11 @@ artifacts:
    - 'build/*'
    - 'deps/*'
   base-directory: "$(pwd)/target/release"
+  secondary-artifacts:
+    files:
+      - 'registry/*'
+    name: registry
+    base-directory: "~/.cargo"
 
 #cache:
 #  paths:
