--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -42,15 +42,15 @@ phases:
 artifacts:
   files:
    - resume
-   - 'build/*'
-   - 'deps/*'
   base-directory: "$(pwd)/target/release"
+  discard-paths: yes
+  name: resume
   secondary-artifacts:
     cargo:
       files:
         - 'registry/*'
       name: registry
-      base-directory: "~/.cargo"
+      base-directory: "/root/.cargo"
 
 #cache:
 #  paths:
