--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -32,7 +32,7 @@ phases:
     commands:
      - pwd
      - ls -ltrah target/x86_64-unknown-linux-musl/release
-#     - ls target
+     - 'ls /root/.cargo'
 #     - ls resume
     # - command
 
