--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -43,15 +43,15 @@ phases:
 #    methinks it must be
 artifacts:
   files:
-   - "$(pwd)/target/x86_64-unknown-linux-musl/release/resume"
+    - '/root/.cargo/registry/*'
+  name: registry
   discard-paths: yes
-  name: resume
-  secondary-artifacts:
-    cargo:
-      files:
-        - '/root/.cargo/registry/*'
-      name: registry
-      discard-paths: yes
+#  secondary-artifacts:
+#    cargo:
+#      files:
+#        - "$(pwd)/target/x86_64-unknown-linux-musl/release/resume"
+#      discard-paths: yes
+#      name: resume
 
 #cache:
 #  paths:
