--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -50,7 +50,7 @@ artifacts:
   secondary-artifacts:
     cargo:
       files:
-        - "$(pwd)/target/x86_64-unknown-linux-musl/release/resume"
+        - "$(pwd)/target/x86_64-unknown-linux-musl/release/*"
       name: build
 
 #cache:
