--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,8 +4,10 @@ phases:
     commands:
      - cd resume
      - mkdir --parents target/x86_64-unknown-linux-musl
-     - mv $CODEBUILD_SRC_DIR_cargo/* $_
-     - ls target/x86_64-unknown-linux-musl
+#     - "mv $CODEBUILD_SRC_DIR_cargo/* $_"
+#     - ls target/x86_64-unknown-linux-musl
+     - echo $_
+     - pwd && ls -ltrah
      - cargo build --release --target x86_64-unknown-linux-musl
      - mv target/x86_64-unknown-linux-musl/release/resume target/resume
 artifacts:
