--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,12 +3,8 @@ phases:
   build:
     commands:
      - cd resume
-     - mkdir --parents target/x86_64-unknown-linux-musl
-#     - "mv $CODEBUILD_SRC_DIR_cargo/* $_"
-     - ls $CODEBUILD_SRC_DIR_cargo
-#     - ls target/x86_64-unknown-linux-musl
-     - echo $_
-     - pwd && ls -ltrah
+     - mv $CODEBUILD_SRC_DIR_cargo .
+     - ls --ltrah
      - cargo build --release --target x86_64-unknown-linux-musl
      - mv target/x86_64-unknown-linux-musl/release/resume target/resume
 artifacts:
