--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,7 +3,7 @@ phases:
   build:
     commands:
      - cd resume
-     - mv $CODEBUILD_SRC_DIR_cargo .
+     - mv $CODEBUILD_SRC_DIR_cargo ./
      - ls --ltrah
      - cargo build --release --target x86_64-unknown-linux-musl
      - mv target/x86_64-unknown-linux-musl/release/resume target/resume
