--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,7 +3,8 @@ phases:
   build:
     commands:
      - cd resume
-     - mv $CODEBUILD_SRC_DIR_cargo ./
+     - ls --ltrah
+     - "mv $CODEBUILD_SRC_DIR_cargo/target target"
      - ls --ltrah
      - cargo build --release --target x86_64-unknown-linux-musl
      - mv target/x86_64-unknown-linux-musl/release/resume target/resume
