--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,9 +3,9 @@ phases:
   build:
     commands:
      - cd resume
-     - ls --ltrah
+     - ls -ltrah
      - "mv $CODEBUILD_SRC_DIR_cargo/target target"
-     - ls --ltrah
+     - ls -ltrah
      - cargo build --release --target x86_64-unknown-linux-musl
      - mv target/x86_64-unknown-linux-musl/release/resume target/resume
 artifacts:
