--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,8 +3,10 @@ phases:
   build:
     commands:
      - cd resume
+     - ls -ltrah $CODEBUILD_SRC_DIR_cargo/target
      - ls -ltrah
-     - "mv $CODEBUILD_SRC_DIR_cargo/target target"
+     - mkdir target
+     - "mv $CODEBUILD_SRC_DIR_cargo/target/* target/"
      - ls -ltrah
      - cargo build --release --target x86_64-unknown-linux-musl
      - mv target/x86_64-unknown-linux-musl/release/resume target/resume
