--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,7 +3,7 @@ phases:
   build:
     commands:
      - cd resume
-     - ls -ltrah $CODEBUILD_SRC_DIR_cargo/target
+     - ls -ltrah $CODEBUILD_SRC_DIR_cargo
      - ls -ltrah
      - mkdir target
      - "mv $CODEBUILD_SRC_DIR_cargo/target/* target/"
