--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,6 +2,7 @@ version: 0.2
 phases:
   build:
     commands:
+     - env
      - cd resume
      - ls -ltrah $CODEBUILD_SRC_DIR_cargo
      - ls -ltrah
