--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,7 +4,7 @@ phases:
     commands:
      - env
      - cd resume
-     - ls -ltrah $CODEBUILD_SRC_DIR_build
+     - ls -ltrah $CODEBUILD_SRC_DIR_build/codebuild
 #     - ls -ltrah
 #     - mkdir target
 #     - "mv $CODEBUILD_SRC_DIR_cargo/ target/"
