--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,11 +4,10 @@ phases:
     commands:
      - env
      - cd resume
-     - ls -ltrah $CODEBUILD_SRC_DIR_build/codebuild
-#     - ls -ltrah
-#     - mkdir target
-#     - "mv $CODEBUILD_SRC_DIR_cargo/ target/"
-#     - ls -ltrah
+     - ls -ltrah
+     - ls -ltrah
+     - "mv $CODEBUILD_SRC_DIR_cargo/ target/"
+     - ls -ltrah target
      - cargo build --release --target x86_64-unknown-linux-musl
      - mv target/x86_64-unknown-linux-musl/release/resume target/resume
 artifacts:
