--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,7 +6,7 @@ phases:
      - cd resume
      - ls -ltrah
      - mkdir target
-     - "cp $CODEBUILD_SRC_DIR_cargo target/"
+     - "cp $CODEBUILD_SRC_DIR_cargo target"
      - ls -ltrah target
      - cargo build --release --target x86_64-unknown-linux-musl
      - mv target/x86_64-unknown-linux-musl/release/resume target/resume
