--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,12 +4,13 @@ phases:
     commands:
      - env
      - cd resume
+     - cd $CODEBUILD_SRC_DIR_build
      - ls -ltrah
-     - mkdir target
-     - "cp $CODEBUILD_SRC_DIR_cargo target"
-     - ls -ltrah target
-     - cargo build --release --target x86_64-unknown-linux-musl
-     - mv target/x86_64-unknown-linux-musl/release/resume target/resume
+#     - mkdir target
+#     - "cp $CODEBUILD_SRC_DIR_build target"
+#     - ls -ltrah target
+#     - cargo build --release --target x86_64-unknown-linux-musl
+#     - mv target/x86_64-unknown-linux-musl/release/resume target/resume
 artifacts:
   files:
    - "resume"
