--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,9 +5,9 @@ phases:
      - env
      - cd resume
      - cd $CODEBUILD_SRC_DIR_build/codebuild/output
+     - ls -ltrah
 #     - mkdir target
 #     - "cp $CODEBUILD_SRC_DIR_build target"
-#     - ls -ltrah target
 #     - cargo build --release --target x86_64-unknown-linux-musl
 #     - mv target/x86_64-unknown-linux-musl/release/resume target/resume
 artifacts:
