--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,8 +3,8 @@ phases:
   build:
     commands:
      - cd resume
+     - ls -ltrah /root/.cargo/registry
      - cargo build --release --target x86_64-unknown-linux-musl
-#     - mv target/ target/resume
 artifacts:
   files:
    - "resume"
