--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,7 +3,9 @@ phases:
   build:
     commands:
      - cd resume
-#     - ls -ltrah /root/.cargo/registry
+     - ls -ltrah
+     - ls -ltrah target
+     - ls -ltrah target/x86_64-unknown-linux-musl/release
      - cargo build --release --target x86_64-unknown-linux-musl
 artifacts:
   files:
