--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,8 +4,8 @@ phases:
     commands:
      - cd resume
      - ls -ltrah
-#     - ls -ltrah target
-#     - ls -ltrah target/x86_64-unknown-linux-musl/release
+     - ls -ltrah target
+     - ls -ltrah target/x86_64-unknown-linux-musl/release
      - cargo build --release --target x86_64-unknown-linux-musl
 artifacts:
   files:
