--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,7 +4,7 @@ phases:
     commands:
      - cd resume
      - cargo build --release --target x86_64-unknown-linux-musl
-     - mv target/x86_64-unknown-linux-musl/release/resume resume
+     - mv target/x86_64-unknown-linux-musl/release/resume ../resume
 artifacts:
   files:
    - "resume"
