--- a/buildspec-resumejson.yaml
+++ b/buildspec-resumejson.yaml
@@ -5,7 +5,7 @@ phases:
       nodejs: 10
   build:
     commands:
-      - sudo npm install -g puppeteer --unsafe-perm=true
+      - npm install -g puppeteer --unsafe-perm=true
       - npm install -g resume-cli
       - resume export resume.html
       - aws s3 mv resume.html s3://tjtolton.com/resume/index.html
