--- a/buildspec-resumejson.yaml
+++ b/buildspec-resumejson.yaml
@@ -5,5 +5,6 @@ phases:
       nodejs: 10
   build:
     commands:
+      - npm install puppeteer --unsafe-perm=true
       - npx resume-cli export resume.html
       - aws s3 mv resume.html s3://tjtolton.com/resume/index.html
