--- a/buildspec-resumejson.yaml
+++ b/buildspec-resumejson.yaml
@@ -5,11 +5,10 @@ phases:
       nodejs: 10
   build:
     commands:
-      - npm install puppeteer --unsafe-perm=true
-      - npm install resume-cli
       - mkdir resume
-      - npx resume export resume/index.html
-      - sed -i '4 i\<script src="https://tjtolton.com/drift.js"></script>' resume/index.html
+      - npm install --save jsonresume-theme-eloquent
+      - node theme.js > resume/index.html
+      - sed -i '8 i\<script src="https://tjtolton.com/drift.js"></script>' resume/index.html
       - aws cloudfront create-invalidation --distribution-id E2FHTVKFO67JA2 --paths /resume*
 artifacts:
   files:
