--- a/buildspec-resumejson.yaml
+++ b/buildspec-resumejson.yaml
@@ -9,7 +9,7 @@ phases:
       - npm install --save jsonresume-theme-eloquent
       - node theme.js > resume/index.html
       - sed -i '8 i\<script src="https://tjtolton.com/drift.js"></script>' resume/index.html
-      - cp resume/index.html resume/tjtolton.doc
+      - cp resume/index.html resume/tjtolton.docx
       - aws cloudfront create-invalidation --distribution-id E2FHTVKFO67JA2 --paths /resume*
 artifacts:
   files:
