--- a/buildspec-resumejson.yaml
+++ b/buildspec-resumejson.yaml
@@ -8,6 +8,7 @@ phases:
       - mkdir resume
       - npm install --save jsonresume-theme-eloquent
       - node theme.js > resume/index.html
+      - node themeML.js > resume/ML.html
       # - sed -i '8 i\<script src="https://tjtolton.com/drift.js"></script>' resume/index.html
       - aws cloudfront create-invalidation --distribution-id E2FHTVKFO67JA2 --paths /resume* /login*
 artifacts:
