just use the name of the theme maybe

--- a/buildspec-resumejson.yaml
+++ b/buildspec-resumejson.yaml
@@ -13,10 +13,10 @@ phases:
     commands:
       - mkdir resume
       # Generate the HTML version of the resume
-      - resume export resume/index.html --theme jsonresume-theme-straightforward
+      - resume export resume/index.html --theme straightforward
 
       # Generate the PDF version of the resume
-      - resume export resume/ML.pdf --theme jsonresume-theme-straightforward --format pdf
+      - resume export resume/ML.pdf --theme straightforward --format pdf
       - aws cloudfront create-invalidation --distribution-id E2FHTVKFO67JA2 --paths /resume* /resume/ML* /login*
 
 artifacts:
