--- a/buildspec-resumejson.yaml
+++ b/buildspec-resumejson.yaml
@@ -15,6 +15,9 @@ phases:
       - npm install -g resume-cli
       - npm install jsonresume-theme-straightforward  # Install theme locally instead of globally
       - mkdir resume
+      -
+      # Add --no-sandbox option to Puppeteer launch config
+      - "sed -i 's/puppeteer.launch({});/puppeteer.launch({args: [\"--no-sandbox\"]});/g' /usr/local/lib/node_modules/resume-cli/node_modules/html-pdf-chrome/lib/chrome.js"
 
   build:
     commands:
